--- a/reveal.js-3.3.0/css/theme/sky.css
+++ b/reveal.js-3.3.0/css/theme/sky.css
@@ -22,7 +22,7 @@ body {
   background-color: #f7fbfc; }
 
 .reveal {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Verdana", "Open Sans", sans-serif;
   font-size: 36px;
   font-weight: normal;
   color: #333; }
@@ -36,6 +36,7 @@ body {
 .reveal .slides > section > section {
   line-height: 1.3;
   font-weight: inherit; }
+
 
 /*********************************************
  * HEADERS
