--- a/reveal.js-3.3.0/css/theme/sky.css
+++ b/reveal.js-3.3.0/css/theme/sky.css
@@ -50,7 +50,7 @@ body {
   margin: 0 0 20px 0;
   color: #333;
   font-family: "Quicksand", sans-serif;
-  font-weight: normal;
+  font-weight: bold;
   line-height: 1.2;
   letter-spacing: -0.08em;
   text-transform: uppercase;
@@ -240,6 +240,9 @@ body {
 .reveal section img.plain {
   border: 0;
   box-shadow: none; }
+
+.reveal section li.small {
+  font-size: 0.6em; }
 
 .reveal a img {
   -webkit-transition: all .15s linear;
